NXP-32663: Clean up